@@ -1,4 +1,6 @@
 Changes with Apache 2.0.30-dev
+  *) Eliminate loop in ap_proxy_string_read().
+     [Adam Sussman, Bill Stoddard]
 
   *) Provide $0..$9 results from mod_include regex parsing.
      [William Rowe]
